tests/baselines/reference/useObjectValuesAndEntries4.errors.txt
tests/cases/conformance/es2017/useObjectValuesAndEntries4.ts(3,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es2017/useObjectValuesAndEntries4.ts (1 errors) ====
    var o = { a: 1, b: 2 };
    
    for (var x of Object.values(o)) {
                  ~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        let y = x;
    }
    
    var entries = Object.entries(o);